# routes/orderRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const { createOrder } = require('../controllers/orderController');
+
+// Route tạo đơn hàng mới
+router.post('/', createOrder);
+
+module.exports = router; 
